<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">


    <TextView
        android:id="@+id/producer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/producer"
        android:textColor="@color/colorNavy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/director_view" />

    <TextView
        android:id="@+id/rt_score_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/rt_score"
        app:layout_constraintBottom_toBottomOf="@+id/rt_score_view"
        app:layout_constraintStart_toEndOf="@+id/rt_score_view"
        app:layout_constraintTop_toTopOf="@+id/rt_score_view" />

    <TextView
        android:id="@+id/description_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_view" />

    <TextView
        android:id="@+id/release_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/release_date"
        android:textColor="@color/colorNavy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_detail" />

    <TextView
        android:id="@+id/director_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/director"
        app:layout_constraintBottom_toBottomOf="@+id/director_view"
        app:layout_constraintStart_toEndOf="@+id/director_view"
        app:layout_constraintTop_toTopOf="@+id/director_view" />

    <TextView
        android:id="@+id/director_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/director"
        android:textColor="@color/colorNavy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/release_date_view" />

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title"
        android:textColor="@color/colorNavy"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/colorNavy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rt_score_view" />

    <TextView
        android:id="@+id/rt_score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/rt_score"
        android:textColor="@color/colorNavy"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/producer_view" />

    <TextView
        android:id="@+id/producer_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/producer"
        app:layout_constraintBottom_toBottomOf="@+id/producer_view"
        app:layout_constraintStart_toEndOf="@+id/producer_view"
        app:layout_constraintTop_toTopOf="@+id/producer_view" />

    <TextView
        android:id="@+id/release_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/release_date"
        app:layout_constraintBottom_toBottomOf="@+id/release_date_view"
        app:layout_constraintStart_toEndOf="@+id/release_date_view"
        app:layout_constraintTop_toTopOf="@+id/release_date_view" />



</androidx.constraintlayout.widget.ConstraintLayout>